[gd_scene load_steps=2 format=3 uid="uid://lmvpv8kp8yog"]

[ext_resource type="Script" uid="uid://cvulcxxvjichs" path="res://hud.gd" id="1_37p78"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_37p78")

[node name="Velocity" type="Label" parent="."]
offset_left = 815.0
offset_top = 569.0
offset_right = 855.0
offset_bottom = 638.0
theme_override_font_sizes/font_size = 25
text = "0
"
horizontal_alignment = 1

[node name="Acceleration" type="Label" parent="."]
offset_left = 1006.0
offset_top = 569.0
offset_right = 1046.0
offset_bottom = 642.0
theme_override_font_sizes/font_size = 25
text = "0
"
horizontal_alignment = 1

[node name="SpeedCap" type="Label" parent="."]
offset_left = 959.0
offset_top = 16.0
offset_right = 1120.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 25
text = "No SpeedCap"
horizontal_alignment = 1

[node name="EffortLevel" type="Label" parent="."]
offset_left = 944.0
offset_top = 72.0
offset_right = 1137.0
offset_bottom = 141.0
theme_override_font_sizes/font_size = 25
text = "Effort Level: 100"
horizontal_alignment = 1

[node name="Gear" type="Label" parent="."]
offset_left = 949.0
offset_top = 124.0
offset_right = 1142.0
offset_bottom = 193.0
theme_override_font_sizes/font_size = 25
text = "Gear: 1"
horizontal_alignment = 1

[node name="NRG" type="Label" parent="."]
offset_left = 694.0
offset_top = 14.0
offset_right = 887.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 25
text = "NRG: 100"
horizontal_alignment = 1

[node name="Rotation" type="Label" parent="."]
offset_left = 47.0
offset_top = 31.0
offset_right = 152.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 25
text = "x: 1 y: 0  z: 0
"
horizontal_alignment = 1

[node name="DebugSpan" type="Label" parent="."]
offset_left = 21.0
offset_top = 580.0
offset_right = 164.0
offset_bottom = 653.0
theme_override_font_sizes/font_size = 15
text = "Debug Mode: True"
horizontal_alignment = 1

[node name="FloorAngle" type="Label" parent="."]
offset_left = 31.0
offset_top = 86.0
offset_right = 174.0
offset_bottom = 159.0
theme_override_font_sizes/font_size = 15
text = "floor angle: 69
"
horizontal_alignment = 1
